Revert "Fix SNERT_CHECK_PACKAGE to set the HAVE_header_h macros to 1"
This reverts commit 9f38e0dc12e27ee49544a3971e0e1c2c9b053a5e.

--- a/configure.ac
+++ b/configure.ac
@@ -697,8 +697,8 @@ AC_SUBST(PGSQL_CPPFLAGS, $CPPFLAGS_PGSQL)
 AC_SUBST(PGSQL_LDFLAGS, $LDFLAGS_PGSQL)
 AC_SUBST(PGSQL_LIBS, $LIBS_PGSQL)
 
-AC_SUBST(XAPIAN_LIBS, $LIBS_XAPAIN)
-AC_SUBST(XAPIAN_CXXFLAGS, $CXXFLAGS_XAPIAN)
+AC_SUBST(XAPIAN_LIBS, LIBS_XAPAIN)
+AC_SUBST(XAPIAN_CXXFLAGS, CXXFLAGS_XAPIAN)
 AC_SUBST(XAPIAN_VERSION)
 
 AC_SUBST(ZEPHYR_LIBS, $LIBS_ZEPHYR)
