Revert "Restore original Bash test for warning if not /bin/bash."
This reverts commit e16daaba7d27855df227a01ead5258fa56e5fb9c.

--- a/configure.ac
+++ b/configure.ac
@@ -192,7 +192,7 @@ AS_IF([test "$GPERF" = 'false'],[
 ])
 
 AC_PATH_PROGS([BASH],[bash],[false])
-AS_IF([test "$BASH" != '/bin/bash'],[
+AS_IF([test "$BASH" = 'false'],[
 	AC_MSG_WARN([Some shell scripts assume [#]!/bin/bash.])
 ])
 
