--- a/perl/imap/Makefile.PL.in
+++ b/perl/imap/Makefile.PL.in
@@ -1,11 +1,11 @@
-#
+# 
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
 # are met:
 #
 # 1. Redistributions of source code must retain the above copyright
-#    notice, this list of conditions and the following disclaimer.
+#    notice, this list of conditions and the following disclaimer. 
 #
 # 2. Redistributions in binary form must reproduce the above copyright
 #    notice, this list of conditions and the following disclaimer in
@@ -15,7 +15,7 @@
 # 3. The name "Carnegie Mellon University" must not be used to
 #    endorse or promote products derived from this software without
 #    prior written permission. For permission or any other legal
-#    details, please contact
+#    details, please contact  
 #      Office of Technology Transfer
 #      Carnegie Mellon University
 #      5000 Forbes Avenue
@@ -52,15 +52,14 @@ sub MY::postamble
 VPATH=@top_srcdir@/perl/imap
 
 cyradm: cyradm.sh
-	@PERL@ @top_srcdir@/tools/fixsearchpath.pl @prefix_copy@ @bindir@ < $< > $@
-#	@PERL_PREINSTALL@ < $< > $@
+	@PERL_PREINSTALL@ < $< > $@
 
 check:
 
 EOT
 }
 
-WriteMakefile(
+WriteMakefile( 
     'NAME'	=> 'Cyrus::IMAP',
     'ABSTRACT'  => 'Cyrus administrative interface',
     'VERSION_FROM' => "@top_srcdir@/perl/imap/IMAP.pm", # finds $VERSION
