resurrect sync_server, but using shared code

--- a/Makefile.am
+++ b/Makefile.am
@@ -225,6 +225,7 @@ sbin_PROGRAMS += \
 endif # HTTPD
 
 if REPLICATION
+libexec_PROGRAMS += imap/sync_server
 sbin_PROGRAMS += imap/sync_client imap/sync_reset
 endif # REPLICATION
 
@@ -1214,6 +1215,9 @@ imap_sync_client_LDADD = $(LD_UTILITY_ADD)
 imap_sync_reset_SOURCES = imap/mutex_fake.c imap/sync_reset.c imap/sync_support.c imap/sync_support.h
 imap_sync_reset_LDADD = $(LD_UTILITY_ADD)
 
+imap_sync_server_SOURCES = imap/mutex_fake.c imap/sync_server.c imap/sync_support.c imap/sync_support.h master/service.c
+imap_sync_server_LDADD = $(LD_SERVER_ADD)
+
 imap_tls_prune_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/tls_prune.c
 imap_tls_prune_LDADD = $(LD_UTILITY_ADD)
 
@@ -1700,7 +1704,6 @@ if SERVER
 	cd $(DESTDIR)$(libexecdir) && \
 	  $(LN_S) -f pop3d pop3proxyd && \
 	  $(LN_S) -f imapd proxyd && \
-	  $(LN_S) -f imapd sync_server && \
 	  $(LN_S) -f lmtpd lmtpproxyd
 endif
 ## The @$(MKDIR_P) line is added due to a bug in Automake 1.10 and can be removed if using Automake 1.12.
