--- a/Makefile.am
+++ b/Makefile.am
@@ -371,8 +371,11 @@ EXTRA_DIST += \
 	lib/charset/windows-1250.t \
 	lib/charset/windows-1251.t \
 	lib/charset/windows-1252.t \
+	lib/charset/windows-1254.t \
 	lib/charset/windows-1255.t \
 	lib/charset/windows-1256.t \
+	lib/charset/windows-1258.t \
+	lib/charset/windows-874.t \
 	lib/htmlchar.st \
 	lib/imapoptions \
 	lib/test/cyrusdb.c \
