add standard --enable-silent-rules option to configure
for less termspam when compiling, if you prefer that

--- a/configure.ac
+++ b/configure.ac
@@ -51,7 +51,7 @@ AC_CONFIG_HEADERS(config.h)
 AC_CONFIG_MACRO_DIR([cmulocal])
 AC_CANONICAL_SYSTEM
 
-AM_INIT_AUTOMAKE([-Wall -Werror -Wno-portability foreign dist-bzip2 no-installinfo subdir-objects])
+AM_INIT_AUTOMAKE([-Wall -Werror -Wno-portability foreign dist-bzip2 no-installinfo subdir-objects silent-rules])
 AC_CONFIG_LIBOBJ_DIR([lib])
 
 dnl if the git repository is here we also have git
