define SYSCONF_DIR at build time, not configure time
Allows `make prefix=... etc` to correctly override configure options
without producing an invalid binary

--- a/Makefile.am
+++ b/Makefile.am
@@ -53,6 +53,7 @@ AM_CPPFLAGS = \
 	-I${top_srcdir}/lib \
 	-DLIBEXEC_DIR=\"$(libexecdir)\" \
 	-DSBIN_DIR=\"$(sbindir)\" \
+	-DSYSCONF_DIR=\"$(sysconfdir)\" \
 	${DEFS} \
 	${LOCALDEFS} \
 	$(SASLFLAGS) \
