Makefile.am: use automatic variables with compile_et

--- a/Makefile.am
+++ b/Makefile.am
@@ -1266,22 +1266,32 @@ imap_unexpunge_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/unexpunge.c
 imap_unexpunge_LDADD = $(LD_UTILITY_ADD)
 
 imap/imap_err.h imap/imap_err.c: imap/imap_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)cd imap && $(COMPILE_ET) ../$(top_srcdir)/imap/imap_err.et
+	$(AM_V_GEN)$(COMPILE_ET) $< && \
+	mv $(top_builddir)/imap_err.h $(top_builddir)/imap/imap_err.h && \
+	mv $(top_builddir)/imap_err.c $(top_builddir)/imap/imap_err.c
 
 imap/mupdate_err.h imap/mupdate_err.c: imap/mupdate_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)cd imap && $(COMPILE_ET) ../$(top_srcdir)/imap/mupdate_err.et
+	$(AM_V_GEN)$(COMPILE_ET) $< && \
+	mv $(top_builddir)/mupdate_err.h $(top_builddir)/imap/mupdate_err.h && \
+	mv $(top_builddir)/mupdate_err.c $(top_builddir)/imap/mupdate_err.c
 
 imap/nntp_err.h imap/nntp_err.c: imap/nntp_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)cd imap && $(COMPILE_ET) ../$(top_srcdir)/imap/nntp_err.et
+	$(AM_V_GEN)$(COMPILE_ET) $< && \
+	mv $(top_builddir)/nntp_err.h $(top_builddir)/imap/nntp_err.h && \
+	mv $(top_builddir)/nntp_err.c $(top_builddir)/imap/nntp_err.c
+
+imap/http_err.h imap/http_err.c: imap/http_err.et $(COMPILE_ET_DEP)
+	$(AM_V_GEN)$(COMPILE_ET) $< && \
+	mv $(top_builddir)/http_err.h $(top_builddir)/imap/http_err.h && \
+	mv $(top_builddir)/http_err.c $(top_builddir)/imap/http_err.c
+
+imap/tz_err.h imap/tz_err.c: imap/tz_err.et $(COMPILE_ET_DEP)
+	$(AM_V_GEN)$(COMPILE_ET) $< && \
+	mv $(top_builddir)/tz_err.h $(top_builddir)/imap/tz_err.h && \
+	mv $(top_builddir)/tz_err.c $(top_builddir)/imap/tz_err.c
 
 imap/http_caldav_js.h: imap/http_caldav.js
 	$(AM_V_GEN)cd imap && xxd -i http_caldav.js > http_caldav_js.h
-
-imap/http_err.h imap/http_err.c: imap/http_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)cd imap && $(COMPILE_ET) ../$(top_srcdir)/imap/http_err.et
-
-imap/tz_err.h imap/tz_err.c: imap/tz_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)cd imap && $(COMPILE_ET) ../$(top_srcdir)/imap/tz_err.et
 
 if MAINTAINER_MODE
 imap/rfc822_header.c: imap/rfc822_header.st
