--- a/Makefile.am
+++ b/Makefile.am
@@ -1268,19 +1268,19 @@ imap_unexpunge_LDADD = $(LD_UTILITY_ADD)
 # $(COMPILE_ET) creates its output files in the directory it's run from,
 # so do a tricky directory change
 imap/imap_err.h imap/imap_err.c: imap/imap_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)(cd $(<D) && $(COMPILE_ET) $(<F))
+	$(AM_V_GEN)(cd $(@D) && $(COMPILE_ET) $(realpath $<))
 
 imap/mupdate_err.h imap/mupdate_err.c: imap/mupdate_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)(cd $(<D) && $(COMPILE_ET) $(<F))
+	$(AM_V_GEN)(cd $(@D) && $(COMPILE_ET) $(realpath $<))
 
 imap/nntp_err.h imap/nntp_err.c: imap/nntp_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)(cd $(<D) && $(COMPILE_ET) $(<F))
+	$(AM_V_GEN)(cd $(@D) && $(COMPILE_ET) $(realpath $<))
 
 imap/http_err.h imap/http_err.c: imap/http_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)(cd $(<D) && $(COMPILE_ET) $(<F))
+	$(AM_V_GEN)(cd $(@D) && $(COMPILE_ET) $(realpath $<))
 
 imap/tz_err.h imap/tz_err.c: imap/tz_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)(cd $(<D) && $(COMPILE_ET) $(<F))
+	$(AM_V_GEN)(cd $(@D) && $(COMPILE_ET) $(realpath $<))
 
 # xxd cannot have path details in its input filename, otherwise it junks up
 # the variable names in the output file.  so do a tricky directory change.
@@ -1631,7 +1631,7 @@ sieve_sievec_LDADD = $(LD_SIEVE_ADD)
 sieve_sieved_LDADD = $(LD_SIEVE_ADD)
 
 sieve/sieve_err.h sieve/sieve_err.c: sieve/sieve_err.et $(COMPILE_ET_DEP)
-	$(AM_V_GEN)(cd $(<D) && $(COMPILE_ET) $(<F))
+	$(AM_V_GEN)(cd $(@D) && $(COMPILE_ET) $(realpath $<))
 
 sieve_test_SOURCES = sieve/test.c imap/mutex_fake.c
 sieve_test_LDADD = sieve/libcyrus_sieve.la $(LD_UTILITY_ADD)
