Makefile.am: mupdate belongs in libexec, not sbin

--- a/Makefile.am
+++ b/Makefile.am
@@ -202,7 +202,7 @@ sbin_PROGRAMS += imap/idled
 endif # IDLED
 
 if MURDER
-sbin_PROGRAMS += imap/mupdate
+libexec_PROGRAMS += imap/mupdate
 endif # MURDER
 
 if NNTPD
