--- a/configure.ac
+++ b/configure.ac
@@ -898,7 +898,7 @@ if test "$with_clamav" != "no"; then
 fi
 
 AC_SUBST(LIB_CLAMAV)
-AM_CONDITIONAL([HAVE_CLAMAV], [test "$have_clamav" = "yes"])
+AM_CONDITIONAL([HAVE_CLAMAV], [test "$with_clamav" = "yes"])
 
 AC_ARG_ENABLE(server,
         [AS_HELP_STRING([--disable-server], [disable compiling servers])])
@@ -1873,6 +1873,7 @@ External dependencies:
    ldap:               $have_ldap
    openssl:            $with_ssl
    pcre:               $cyrus_cv_pcre_utf8
+   clamav:             $with_clamav
 
 Database support:
    mysql:              $with_mysql
