.gitignore: cyr_virusscan build product

--- a/.gitignore
+++ b/.gitignore
@@ -59,6 +59,7 @@ imap/cyr_sequence
 imap/cyr_sphinxmgr
 imap/cyr_synclog
 imap/cyr_userseen
+imap/cyr_virusscan
 imap/cyrdump
 imap/dav_reconstruct
 imap/deliver
