Makefile: build doc/rst/imapd.conf.rst

--- a/Makefile.am
+++ b/Makefile.am
@@ -98,6 +98,7 @@ MAINTAINERCLEANFILES = \
 	doc/netnews.png \
 	doc/man/cyradm.1.html \
 	man/imapd.conf.5 \
+	doc/rst/imapd.conf.rst \
 	man/sieveshell.1 \
 	doc/man/sieveshell.1.html \
 	imap/lmtpstats.h \
@@ -1431,6 +1432,7 @@ lib/imapopts.c: lib/imapoptions tools/config2header
 @SET_MAKE@
 
 dist_man_MANS = \
+	doc/rst/imapd.conf.rst \
 	man/imtest.1 \
 	man/installsieve.1 \
 	man/lmtptest.1 \
@@ -1691,6 +1693,11 @@ man/imapd.conf.5: $(top_srcdir)/tools/config2man $(top_srcdir)/lib/imapoptions
 	@echo creating man/imapd.conf.5
 	@$(MKDIR_P) man
 	$(AM_V_GEN)$(top_srcdir)/tools/config2man $(top_srcdir)/lib/imapoptions > $@
+
+doc/rst/imapd.conf.rst: $(top_srcdir)/tools/config2rst $(top_srcdir)/lib/imapoptions
+	@echo creating man/imapd.conf.rst
+	@$(MKDIR_P) doc/rst
+	$(AM_V_GEN)$(top_srcdir)/tools/config2rst $(top_srcdir)/lib/imapoptions > $@
 
 man/sieveshell.1: $(top_srcdir)/perl/sieve/scripts/sieveshell.pl
 	@echo creating man/sieveshell.1
