Add config2rst to dist_noinst_SCRIPTS in Makefile.am
Summary: This is to fix build problems with harbormaster.

Test Plan: harbormaster build

Reviewers: #imap_reviewers, vanmeeuwen

Reviewed By: #imap_reviewers, vanmeeuwen

Subscribers: vanmeeuwen

Differential Revision: https://git.cyrus.foundation/D58

--- a/Makefile.am
+++ b/Makefile.am
@@ -541,6 +541,7 @@ dist_noinst_SCRIPTS = \
 	tools/compile_st.pl \
 	tools/config2header \
 	tools/config2man \
+	tools/config2rst \
 	tools/convert-sieve.pl \
 	tools/dohash \
 	tools/fixsearchpath.pl \
